stop map tooltip from jumping around

--- a/wp-content/themes/makerfaire/less/global.less
+++ b/wp-content/themes/makerfaire/less/global.less
@@ -389,6 +389,12 @@ ul.bulletless {
 	display:flex;
 	width: max-content;
 	padding: 10px;
+	&:first-of-type {
+		display: none;
+	}
+	&:last-of-type {
+		display: inline-block !important;
+	}
 }
 
 .dropdown-menu {
